--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crossword</title>
-    <!--<link rel="stylesheet" media="screen" type="text/css" href="bundle.css">-->
+    <link rel="stylesheet" media="screen" type="text/css" href="bundle.css">
 </head>
 <body>
     <div id="app"></div>
