--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script charset="utf-8" src="bundle.js"></script>
 </body>
 </html>
