--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crossword</title>
-    <!--<link rel="stylesheet" media="screen" type="text/css" href="bundle.css">-->
+    <link rel="stylesheet" media="screen" type="text/css" href="bundle.css">
 </head>
 <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <script charset="utf-8" src="bundle.js"></script>
 </body>
 </html>
